   representation of the error message to the message queue.
7. doc/tm/strops.tm: Corrected the documentation for the string_match
   function. (Guenter Milde)
8. src/sllimits.h: Increased the size of the hash table that stores
   SLstrings for better efficiency.
9. src/slstrops.c:_pSLang_push_nstring: Inlined the call to
   _pSLang_push_slstring.

Changes since 2.1.0
1. slsh/lib/print.sl: Only the first element of arrays such as
   Float_Type[1,1,1,10] were getting printed.
2. src/slscanf.c: strings containing only whitespace were not parsed
   properly by _pSLang_sscanf when %s was used in the format.
3. slsh/lib/readascii.sl: A flexible ascii data file reader.
4. src/slang.ver: Updated the linker version script
   (mlichvar at redhat, com).
5. src/slang.ver: The wildcard for the SLANG2 symbols was picking up
   the SLANG2.1.0 symbols.  (mlichvar at redhat, com).
6. slsh/lib/readascii.sl: Added type and cols qualifiers.  Updated docs.
7. src/slang.c: If auto_declare is non-zero, and a reference to an
   undefined variable is made, that variable will be automatically
   created and given static scope.
8. slsh/lib/autoload.sl: readascii added.
9. src/slrline.c: The redraw function was ignoring the application
   installed update hook, disrupting the display when a redraw was
   requested.
10. autoconf/configure.ac: -liconv was not getting added when creating
    the iconv module on systems with a standalone iconv library.
11. slsh/lib/readascii.sl: Added "as_list" qualifier to return values in
    lists rather than arrays.
12. src/slscanf.c: Added inf/nan support to sscanf.
13. src/slboseos.c: Before calling the hooks, push the error context
    so that they will work in the presence of errors.
14. lib/slsh/tm/profile.tm: Documented the profile_* functions.
15. doc/tm/slang.tm: Added documentation about qualifiers.
16. src/slarray.c,modules/*.c: Use SLindex_Type instead of int for
    indexing arrays.  Currently SLindex_Type is typedefd as an int.